--- a/toolchains_examples/BUILD
+++ b/toolchains_examples/BUILD
@@ -2,6 +2,9 @@ load("@rules_foreign_cc//tools/build_defs/shell_toolchain/toolchains:defs.bzl", 
 load(":additional_toolchains.bzl", "ADD_TOOLCHAIN_MAPPINGS")
 load(":test_platform_name_rule.bzl", "test_platform_name")
 
+# Targets of type "toolchain" are created inside for the values of ADD_TOOLCHAIN_MAPPINGS,
+# with the correct constraints taken from mappings.
+# The "toolchain_data" is referencing generated @commands_overloads.
 register_mappings(
     mappings = ADD_TOOLCHAIN_MAPPINGS,
     toolchain_type_ = "@rules_foreign_cc//tools/build_defs/shell_toolchain/toolchains:shell_commands",
