--- a/toolchains_examples/WORKSPACE
+++ b/toolchains_examples/WORKSPACE
@@ -8,6 +8,9 @@ local_repository(
 load("@rules_foreign_cc//:workspace_definitions.bzl", "rules_foreign_cc_dependencies")
 load(":additional_toolchains.bzl", "ADD_TOOLCHAIN_MAPPINGS")
 
+# We are registering additional shell toolchain implementation for fancy_platform.
+# The target of the type "toolchain" will be created in the root package of the current workspace,
+# so we are passing this value as additonal_shell_toolchain_package.
 rules_foreign_cc_dependencies(
     additonal_shell_toolchain_mappings = ADD_TOOLCHAIN_MAPPINGS,
     additonal_shell_toolchain_package = "@rules_foreign_cc_toolchains_examples//",
